<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.dev.unit537.vrds_companion_app.LPCalculatorFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/TurnPlayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_turnPlayer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/turn_player"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PhaseTracker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager_PhaseTracker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fadingEdge="horizontal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/TurnCount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_passTurn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pass_turn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PlayerNames"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_player1Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/player_1"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:text="@string/player_1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_player2Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/player_2"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:text="@string/player_2"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PlayerLP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_player1LP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="False"
            android:hint="@string/p1_lp"
            android:inputType="number"
            android:linksClickable="false"
            android:longClickable="false"
            android:text="@string/_8000"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_player2LP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="False"
            android:hint="@string/p2_lp"
            android:inputType="number"
            android:linksClickable="false"
            android:longClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/_8000"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LPModifier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_player1SubLP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button_player1AddLP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <EditText
            android:id="@+id/editText_LifePointsModifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/_0"
            android:inputType="number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_player2SubLP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button_player2AddLP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/NumRow789"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button_num8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_num9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/NumRow456"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_num5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_num6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/NumRow123"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_num2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_num3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/NumRow000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button_num00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_00" />

        <Button
            android:id="@+id/button_num000"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CalcControls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button_dice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dice" />

        <Button
            android:id="@+id/button_coin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/coin" />
    </LinearLayout>

</LinearLayout>
